--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "zero-degree",
-  "version": "2.2.2",
-  "description": "Watches and contstanly returns the direction angle between the device and the target location as the phone rotates or moves. This is a React Native package using Expo.",
+  "version": "3.0.0",
+  "description": "An NPM package to constantly monitors and returns the direction angle of the device and the target place as the phone rotates or moves. This is a React Native package using Expo.",
   "main": "index.js",
   "license": "MIT",
   "author": "TareqNewazShahriar",
