--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
    "name": "zero-degree",
    "version": "3.1.4",
-   "description": "An NPM package to constantly monitors and returns the direction angle of the device and the target place as the phone rotates or moves. This is a React Native package using Expo.",
+   "description": "A module that constantly monitors and returns the direction angle of the target location as the phone rotates or moves. This is a React Native/Expo package.",
    "main": "index.js",
    "license": "MIT",
    "author": "TareqNewazShahriar",
